--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Mi primer página online</h1>
 	<h2>Ademas de ser mi primer pagina online, es mi primer desarrallo en GitHub</h2>
+	<img src="images/git.png">
 	<footer>
 		&copy;Gaston Lopez
 	</footer>
