Efectos de codepen

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mi primer página publicada</title>
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/botonera.css">
 </head>
 <body>
-	<h1>Mi primer página online</h1>
+	<header>
+		<section class="buttons">
+		  <div class="container">
+		    <h1>Efectos para Botones CSS</h1>
+		    <!-- Button 1--><a class="btn btn-1" href="#" title="borde animado SVG">
+		      <svg>
+		        <rect x="0" y="0" fill="none" width="100%" height="100%"></rect>
+		      </svg>Botón 1</a>
+		    <!-- Button 2--><a class="btn btn-2" href="#" title="borde animado Arriba-Abajo">Botón 2</a>
+		    <!-- Button 3--><a class="btn btn-3" href="#" title="de relieve">Botón 3</a>
+		    <!-- Button 4--><a class="btn btn-4" href="#" title="brillo"><span>Botón 4</span></a>
+		    <!-- Button 5--><a class="btn btn-5" href="#" title="borde resplandor">Botón 5</a>
+		  </div>
+		</section>
+	</header>
+	<h1 class="titulo-glitch">Mi primer página online</h1>
 	<h2>Ademas de ser mi primer pagina online, es mi primer desarrallo en GitHub</h2>
 	<img src="images/git.png">
 	<footer>
